--- a/assignment1/pom.xml
+++ b/assignment1/pom.xml
@@ -6,10 +6,16 @@
   
   <dependencies>
     <dependency>
-	  <groupId>com.fasterxml.jackson.core</groupId>
-	  <artifactId>jackson-databind</artifactId>
-	  <version>2.5.0</version>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.5.0</version>
     </dependency>
+    
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-jdbc</artifactId>
+		<version>4.2.2.RELEASE</version>
+	</dependency>
   </dependencies>
   
 </project>
