--- a/assignemnt1/pom.xml
+++ b/assignemnt1/pom.xml
@@ -41,6 +41,11 @@
 		<artifactId>jackson-databind</artifactId>
 		<version>2.4.6</version>
     </dependency>
+    
+    <dependency>
+	<groupId>mysql</groupId>
+	<artifactId>mysql-connector-java</artifactId>
+</dependency>
 		
 	</dependencies>
 	
