--- a/assignemnt1/src/main/resources/application.properties
+++ b/assignemnt1/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost//assignment1
+spring.datasource.url = jdbc:mysql://localhost/assignment1
 spring.datasource.username = root
 spring.datasource.password = 
 
