--- a/assignemnt1/pom.xml
+++ b/assignemnt1/pom.xml
@@ -30,6 +30,12 @@
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring3</artifactId>
+			<version>2.1.4.RELEASE</version>
+		</dependency>
+		
 	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
