--- a/assignment1/pom.xml
+++ b/assignment1/pom.xml
@@ -76,8 +76,19 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
         <version>4.1.6.RELEASE</version>
+  
     </dependency>
-		
+	<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>3.0.7.RELEASE</version>
+</dependency>
+
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-web</artifactId>
+    <version>3.0.7.RELEASE</version>
+</dependency>
 	</dependencies>
 	
 	<build>
