--- a/assignment1/pom.xml
+++ b/assignment1/pom.xml
@@ -78,6 +78,11 @@
         <version>4.1.6.RELEASE</version>
   
     </dependency>
+    
+     <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
 
 	</dependencies>
 	
