--- a/assignment1/pom.xml
+++ b/assignment1/pom.xml
@@ -83,6 +83,22 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
+    
+    <dependency>
+        <groupId>org.thymeleaf.extras</groupId>
+        <artifactId>thymeleaf-extras-springsecurity3</artifactId>
+        <version>2.1.2.RELEASE</version>
+
+</dependency>   
+
+    <dependency>
+
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-taglibs</artifactId>
+    <version>3.1.0.RELEASE</version>
+    <type>jar</type>
+    <scope>compile</scope>
+</dependency>
 
 	</dependencies>
 	
